<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cyan"
        tools:context=".activity.addbook.AddActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/home"
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:adjustViewBounds="true"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="@+id/book_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/book_title" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/book_title"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nama_buku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/nama_buku"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/home"
                app:layout_constraintTop_toBottomOf="@+id/home" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_buku"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nama_buku"
                app:layout_constraintTop_toBottomOf="@+id/nama_buku">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/masukkan_nama_buku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_name_buku"
                    android:inputType="textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/jenis_buku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/jenis_buku"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/home"
                app:layout_constraintTop_toBottomOf="@+id/input_buku" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_buku_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/jenis_buku"
                app:layout_constraintTop_toBottomOf="@+id/jenis_buku">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rubah_buku"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_jenis_buku"
                    android:inputType="textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/penerbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/penerbit"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/home"
                app:layout_constraintTop_toBottomOf="@+id/input_buku_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_position_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/penerbit"
                app:layout_constraintTop_toBottomOf="@+id/penerbit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/penerbit_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_penerbit"
                    android:inputType="textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/penulis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/penulis"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/home"
                app:layout_constraintTop_toBottomOf="@+id/player_position_input" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_nationally_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/penulis"
                app:layout_constraintTop_toBottomOf="@+id/penulis">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/penulis_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_penulis"
                    android:inputType="textNoSuggestions" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tahun_terbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tahun_terbit"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/nama_buku"
                app:layout_constraintTop_toBottomOf="@+id/player_nationally_input" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/player_desc_input"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tahun_terbit"
                app:layout_constraintTop_toBottomOf="@+id/tahun_terbit">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tahun_terbit_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/masukkan_tahun_terbit"
                    android:inputType="textMultiLine"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/jumlah_halaman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/jumlah_halaman"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/player_desc_input"
                app:layout_constraintTop_toBottomOf="@+id/player_desc_input" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_halaman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:endIconMode="custom"
                app:endIconTint="@color/black"
                app:endIconTintMode="multiply"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/jumlah_halaman"
                app:layout_constraintTop_toBottomOf="@+id/jumlah_halaman">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/jumlah_halaman_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/masukkan_jumlah_halaman"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/simpan_buku"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/white"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/simpan_data_buku"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_halaman" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>